Complete comprehensive testing framework with documentation
- Add 4 distinct testing approaches: JUnit5 self-contained, WireMock integration, CLI organizational pattern, PREPROD validation
- Implement service virtualization with FakeS3Service for DEV environments
- Add WireMock integration for external service mocking
- Include complete from-scratch setup documentation with troubleshooting guide
- All 8 Karate test scenarios passing across all approaches
- Support both modern patterns and existing organizational CLI approach
- Zero infrastructure dependencies for DEV testing environments